# Unireal

./: CMakeLists.txt  README.md  UnirealUML.mdj
Content/Shaders/: DebugShader.fragmentshader  DebugShader.vertexshader  NormalMapping.vertexshader  ShadowMapping.vertexshader
Content/Textures/: Default_White.dds
Solution/: CMakeLists.txt  CMakeLists2.txt
Solution/Scripts/Engine/: CameraManager.cpp  CameraManager.h  Engine.cpp  Engine.h  Macros.h  Main.cpp  World.cpp  World.h
Solution/Scripts/GUI/: Window.cpp  Window.h
Solution/Scripts/Game/: Actor.h  Component.h  SceneComponent.cpp  SceneComponent.h  StaticMeshComponent.cpp  StaticMeshComponent.h
Solution/Scripts/Game/Actors/: Actor.cpp  Actor.h
Solution/Scripts/Game/Components/: Component.cpp  Component.h  SceneComponent.cpp  SceneComponent.h  StaticMeshComponent.h
Solution/Scripts/Libraries/: List.h  Vectors.h
Solution/Scripts/common/: controls.cpp  controls.hpp  objloader.cpp  objloader.hpp  shader.cpp  shader.hpp  tangentspace.cpp  tangentspace.hpp  text2D.cpp  text2D.hpp  texture.cpp  texture.hpp  vboindexer.hpp
Solution/Shaders/: StandardShading.vertexshader  StandardShadingRTT.vertexshader
Source/: CMakeLists.txt
Source/Core/: Event.h  Macros.h  String.cpp  String.h
Source/Core/Common/: Shader.cpp  Shader.h  controls.cpp  controls.hpp  objloader.cpp  objloader.hpp  tangentspace.hpp  text2D.cpp  texture.cpp  texture.hpp  vboindexer.cpp  vboindexer.hpp
Source/Core/Containers/: Array.h  Vectors.h
Source/Core/ImGUI/: imgui.h
Source/Editor/GUI/Controls/: Button.cpp  Button.h
Source/Editor/GUI/Widgets/: ActiveWidget.cpp  ActiveWidget.h  ConsoleWidget.cpp  ConsoleWidget.h  ContentWidget.cpp  ContentWidget.h  EditorBarWidget.cpp  EditorBarWidget.h  PanelWidget.cpp  PanelWidget.h  RenderPanelWidget.cpp  RenderPanelWidget.h  ToolBarWidget.cpp  ToolBarWidget.h  Widget.cpp  Widget.h
Source/Editor/GUI/Windows/: Window.cpp  Window.h
Source/Editor/GameLoop/: Engine.cpp  Engine.h  Main.cpp
Source/Runtime/: Object.cpp  Object.h  World.cpp  World.h
Source/Runtime/Actors/: Actor.cpp  Actor.h
Source/Runtime/Components/: Component.cpp  Component.h  SceneComponent.cpp  SceneComponent.h  StaticMeshComponent.cpp  StaticMeshComponent.h
Source/Runtime/Managers/: CameraManager.cpp  CameraManager.h  InputManager.cpp  InputManager.h  Manager.h  TimerManager.cpp  TimerManager.h
